--- a/client/FieldEngineerLite.iOS/Info.plist
+++ b/client/FieldEngineerLite.iOS/Info.plist
@@ -15,11 +15,11 @@
 	<key>MinimumOSVersion</key>
 	<string>8.3</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.FieldEngineerLite</string>
+	<string>com.test.example</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string></string>
+	<string>1.0</string>
 	<key>NSMainNibFile</key>
 	<string></string>
 	<key>NSMainNibFile~ipad</key>
@@ -29,6 +29,8 @@
 		<string>Default-568h@2x.png</string>
 	</array>
 	<key>CFBundleDisplayName</key>
+	<string>FieldEngineer</string>
+	<key>CFBundleName</key>
 	<string>FieldEngineer</string>
 </dict>
 </plist>
